// Original file: /Users/aero/work/workspace/Ficus/protos/kafka_service.proto

import type { GrpcKafkaPipelineExecutionRequest_DONTUSE as _ficus_GrpcKafkaPipelineExecutionRequest_DONTUSE, GrpcKafkaPipelineExecutionRequest as _ficus_GrpcKafkaPipelineExecutionRequest } from '../ficus/GrpcKafkaPipelineExecutionRequest';

export interface GrpcAddPipelineStreamRequest_DONTUSE {
  'pipelineRequest'?: (_ficus_GrpcKafkaPipelineExecutionRequest_DONTUSE | null);
}

export interface GrpcAddPipelineStreamRequest {
  'pipelineRequest': (_ficus_GrpcKafkaPipelineExecutionRequest | null);
}
